change to Java 1.8