@@ -7,6 +7,7 @@ import de.jonas.util.TeamColor;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Bishop extends ChessPiece {
     private ImageTheme theme;
@@ -53,7 +54,7 @@ public class Bishop extends ChessPiece {
             }
         }
 
-        return locationsList.stream().filter(location -> isLocationValid(chessBoard, location)).toList();
+        return locationsList.stream().filter(location -> isLocationValid(chessBoard, location)).collect(Collectors.toList());
     }
 
     @Override
